--- a/views/layout.twig
+++ b/views/layout.twig
@@ -4,15 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Luis Arce</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css"
-          type="text/css">
-
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     {% block css %}{% endblock %}
-    <title>Luis Arce</title>
 </head>
 <body>
 <div class="container">
