--- a/views/index.twig
+++ b/views/index.twig
@@ -33,6 +33,7 @@
             </p>
         </div>
     </div>
+
     <div class="row">
         <div class="col">
             <div>
@@ -40,7 +41,7 @@
                 {% for job in jobs %}
                     <div class="row work-position">
                         <div class="col-12 col-md-3">
-                            <img id="profile-picture" src="{{ job.imageUrl }}" alt="imagen del trabajo">
+                            <img id="profile-picture" src="{{ job.getImage(job.title) }}" alt="imagen del trabajo">
                         </div>
                         <div class="col">
                             <h5>{{ job.title }}</h5>
@@ -50,52 +51,30 @@
                     </div>
                 {% endfor %}
             </div>
+
             <div>
                 <h3 class="border-bottom-gray">Projects</h3>
-                <ul>
-                </ul>
                 {% for project in projects %}
-                    <div class="project">
-                        <h5>{{ project.title }}</h5>
+                    <div class="row project">
                         <div class="row">
-                            <div class="col-3">
-                                <img id="profile-picture" src="https://ui-avatars.com/api/?name=John+Doe&size=255"
-                                     alt="">
+                            <div class="col-12 col-md-3">
+                                <img id="profile-picture" src="{{ project.getImage(project.title) }}" alt="">
                             </div>
                             <div class="col">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum corporis at
-                                    accusamus
-                                    quisquam hic quos vel? Tenetur, ullam veniam consequatur esse quod cum, quam
-                                    cupiditate
-                                    assumenda natus maiores aperiam.</p>
+                                <h5>{{ project.title }}</h5>
+                                <p>{{ project.description }}</p>
                                 <strong>Technologies used:</strong>
                                 <span class="badge badge-secondary">PHP</span>
                                 <span class="badge badge-secondary">HTML</span>
                                 <span class="badge badge-secondary">CSS</span>
+                                <p>{{ project.months }} meses</p>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
-
-                <div class="project">
-                    <h5>Project X</h5>
-                    <div class="row">
-                        <div class="col-3">
-                            <img id="profile-picture" src="https://ui-avatars.com/api/?name=John+Doe&size=255" alt="">
-                        </div>
-                        <div class="col">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum corporis at accusamus
-                                quisquam hic quos vel? Tenetur, ullam veniam consequatur esse quod cum, quam cupiditate
-                                assumenda natus maiores aperiam.</p>
-                            <strong>Technologies used:</strong>
-                            <span class="badge badge-secondary">PHP</span>
-                            <span class="badge badge-secondary">HTML</span>
-                            <span class="badge badge-secondary">CSS</span>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
+
         <div class="col-3">
             <h3 class="border-bottom-gray">Skills & Tools</h3>
             <h4>Backend</h4>
@@ -119,6 +98,7 @@
             </ul>
         </div>
     </div>
+
     <div id="resume-footer" class="row">
         <div class="col">
             Designed by @luisarce
