Agregando Soft Delete y Hard Delete y Restore
Haciendo uso de Eloquent

--- a/views/admin/admin.twig
+++ b/views/admin/admin.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Dashboard</h1>
     <ul>
-        <li><a href="jobs/add">Jobs</a></li>
+        <li><a href="jobs">Jobs</a></li>
         <li><a href="projects/add">Projects</a></li>
         <li><a href="users/add">Users</a></li>
     </ul>
