--- a/views/admin/jobs/addJob.twig
+++ b/views/admin/jobs/addJob.twig
@@ -31,10 +31,10 @@
             </div>
         </div>
 
-        <div class="form-group custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1" name="visible" value="true" checked>
-            <label class="custom-control-label" for="customCheck1">Visible</label>
-        </div>
+{#        <div class="form-group custom-control custom-checkbox">#}
+{#            <input type="checkbox" class="custom-control-input" id="customCheck1" name="visible" value="true" checked>#}
+{#            <label class="custom-control-label" for="customCheck1">Visible</label>#}
+{#        </div>#}
 
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
